other-vpol/block-large-images/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: image-vol
    image: nvcr.io/nvidia/cuda@sha256:fbb1580c300b57365c4df0f64b20c6ee80dca0ee9c592311e38567240a334c12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: image-vol
    image: nvcr.io/nvidia/cuda@sha256:fbb1580c300b57365c4df0f64b20c6ee80dca0ee9c592311e38567240a334c12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
  - name: image-vol
    image: nvcr.io/nvidia/cuda@sha256:fbb1580c300b57365c4df0f64b20c6ee80dca0ee9c592311e38567240a334c12
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
