other-vpol/block-large-images/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-large-images
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../block-large-images.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: block-large-images
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - apply:
        file: exception-namespace.yaml
    - apply:
        file: exceptions.yaml
  - name: step-02
    try:
    - apply:
        file: pods-good.yaml
    - apply:
        expect:
        - check:
            ($error == null): true
        file: pod-exception.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'images with size greater than 2Gi not allowed')): true
        file: pods-bad.yaml
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            (contains($error, 'images with size greater than 2Gi not allowed')): true
        file: podcontrollers-bad.yaml
